<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tetris</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="themes">Themes</string>
    <string name="achievements">Achievements</string>
<string name="score">Score</string>
    <string name="level">Level</string>
    <string name="lines">Lines</string>
    <string name="time">Time</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="quit">Quit</string>
<string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="tutorial_next">Next</string>
</resources>